[package]
name = "bonding-curve-contract"
version = "0.0.0"
authors = ["Alin Cruceat <alin.cruceat@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/bonding_curve_contract.rs"

[dependencies.dharitri-sc]
version = "1.16.0"

[dependencies.dharitri-sc-modules]
version = "1.16.0"

[dev-dependencies.dharitri-sc-scenario]
version = "1.16.0"
