[package]
name = "check-pause"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"
publish = false

[lib]
path = "src/check_pause.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.dharitri-sc-scenario]
version = "1.0.1"

[dependencies.dharitri-sc]
version = "1.0.1"

[dependencies.dharitri-sc-modules]
version = "1.0.1"
