[package]
name = "dcdt-transfer-with-fee"
version = "0.0.0"
authors = ["Alin Cruceat <alin.cruceat@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/dcdt_transfer_with_fee.rs"

[dependencies.dharitri-sc]
version = "1.16.0"

[dev-dependencies.dharitri-sc-scenario]
version = "1.16.0"
