[package]
name = "dn404"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "=1.16.0"

[dependencies.dharitri-sc-modules]
version = "=1.16.0"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.4.1"

[dev-dependencies.dharitri-sc-scenario]
version = "=1.16.0"
