[package]
name = "fractional-nfts"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"
publish = false

[lib]
path = "src/fractional_nfts.rs"

[dependencies.dharitri-sc]
version = "1.0.1"

[dependencies.dharitri-sc-modules]
version = "1.0.1"

[dev-dependencies.dharitri-sc-scenario]
version = "1.0.1"
