[package]
name = "on-chain-claim"
version = "0.0.0"
authors = ["Vlad Bucur <vlad.bucur@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/contract.rs"

[dependencies.dharitri-sc]
version = "1.16.0"

[dependencies.dharitri-sc-modules]
version = "1.16.0"

[dev-dependencies.dharitri-sc-scenario]
version = "1.16.0"
