[package]
name = "dharitri-sc-price-aggregator"
version = "1.0.1"
authors = ["contact@dharitri.org"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "Dharitri Price aggregator Smart Contract"
keywords = [
    "dharitri",
    "wasm",
    "webassembly",
    "blockchain",
    "contract",
]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
]
edition = "2021"

[lib]
path = "src/lib.rs"

[dev-dependencies.dharitri-sc-scenario]
version = "1.0.1"

[dependencies.dharitri-sc]
version = "1.0.1"

[dependencies.dharitri-sc-modules]
version = "1.0.1"

[dependencies.arrayvec]
version = "0.7.1"
default-features = false

[dependencies.rand]
version = "0.8.5"

[dependencies.getrandom]
version = "0.2"
features = ["js"]
