[package]
name = "dharitri-sc-price-aggregator"
version = "0.47.1"
authors = [
    "Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>",
    "dharitrI <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dharitri/drt-rs-sdk"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "dharitrI Price aggregator Smart Contract"
keywords = [
    "dharitri",
    "wasm",
    "webassembly",
    "blockchain",
    "contract",
]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
]
edition = "2021"

[lib]
path = "src/lib.rs"

[dev-dependencies.dharitri-sc-scenario]
version = "1.16.0"

[dependencies.dharitri-sc]
version = "1.16.0"

[dependencies.dharitri-sc-modules]
version = "1.16.0"

[dependencies.arrayvec]
version = "0.7.1"
default-features = false

[dependencies.rand]
version = "0.8.5"

[dependencies.getrandom]
version = "0.2"
features = ["js"]
