[package]
name = "seed-nft-minter"
version = "0.0.0"
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/seed_nft_minter.rs"

[dependencies.dharitri-sc]
version = "1.16.0"

[dependencies.dharitri-sc-modules]
version = "1.16.0"

[dev-dependencies.dharitri-sc-scenario]
version = "1.16.0"
