[[bin]]
name = "multisig-interact"
path = "src/multisig_interact.rs"

[package]
name = "multisig-interact"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2021"
publish = false

[dependencies]
toml = "0.8.6"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.multisig]
path = ".."

[dependencies.dharitri-sc-modules]
version = "1.16.0"

[dependencies.dharitri-sc-snippets]
version = "1.16.0"

[dependencies.dharitri-sc-scenario]
version = "=1.16.0"

[dependencies.dharitri-sc]
version = "=1.16.0"
