[[bin]]
name = "ping-pong-rewa-interact"
path = "src/interact_main.rs"

[package]
name = "ping-pong-rewa-interact"
version = "0.0.0"
authors = ["dharitrI <contact@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/interact.rs"

[dependencies]
toml = "0.8.6"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.24"

[dependencies.ping-pong-rewa]
path = ".."

[dependencies.dharitri-sc-snippets]
version = "1.16.0"

[dependencies.dharitri-sc]
version = "1.16.0"

[features]
chain-simulator-tests = []
