[package]
name = "rewards-distribution-meta"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>"]

[dev-dependencies]

[dependencies.rewards-distribution]
path = ".."

[dependencies.dharitri-sc-meta-lib]
version = "1.16.0"
default-features = false
