[package]
name = "dharitri-sc-wrewa-swap-meta"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"
publish = false

[dev-dependencies]

[dependencies.dharitri-sc-wrewa-swap]
path = ".."

[dependencies.dharitri-sc]
version = "1.16.0"

[dependencies.dharitri-sc-meta-lib]
version = "1.16.0"
default-features = false
